{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "EditMode",
            "id": "a3944401-b24a-4adb-9617-0db22f480974",
            "actions": [
                {
                    "name": "Next",
                    "type": "Button",
                    "id": "d8436a85-3f8e-4d6a-ac08-2a22e8b7c63b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Previous",
                    "type": "Button",
                    "id": "35e93c2d-5993-4756-9ce8-2d5cac11d75e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncrementValue",
                    "type": "Button",
                    "id": "535322f9-d212-453f-bcc6-e13e2b2d0b12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecrementValue",
                    "type": "Button",
                    "id": "86541173-3d88-4264-8a8e-fc5fd49e718f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "abb43087-ccdd-41d3-b8cb-1cb9f732b42a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c8e9a15-f278-4c25-a68b-eae9bb9ab6ab",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Previous",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67a37ee6-cf5b-435d-ae8a-4b5faf375450",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncrementValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4908c492-87e8-4d84-923d-4357bfa79922",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecrementValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RunMode",
            "id": "aa688f1b-d413-472b-8976-d8c7498600da",
            "actions": [
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "231c1934-9706-452b-8680-7712c4c7f3e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "380e33a2-937f-42ad-a74a-b9a0a37dc035",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControls",
            "id": "7fb74a35-390c-40b0-9865-41dcad9bfd93",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "6ce63798-ba1b-420e-ab78-175310003b10",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "a4976b1a-0fb2-4d86-b618-3f59e81ecb3b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "63b4cf1e-6caf-4d13-b90c-50fc9654cc81",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cec02ed7-ab5e-40f7-a0ac-1065739759a6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0e284528-6f4e-4456-9de3-f426f44fe27d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3dbaee0e-d925-4c76-b844-00ee2d63a9db",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "679fcb4c-370c-44f0-a077-a44d1078caad",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b3e95c7a-d163-4492-831b-a1d4c0c53121",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GlobalActions",
            "id": "24c1b134-86d1-4307-aa8e-4cc36d2e2053",
            "actions": [
                {
                    "name": "GoToEditMode",
                    "type": "Button",
                    "id": "703e2375-6ed8-450a-87c5-b7b2c6925114",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoToSimulationMode",
                    "type": "Button",
                    "id": "5af64e7b-5cc1-42a0-b807-bfd2464af2ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoToNextLevel",
                    "type": "Button",
                    "id": "7a60ef00-9e7d-4dbf-8d50-1ae4024f4d26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoToPreviousLevel",
                    "type": "Button",
                    "id": "22d5c3fe-47f0-4db2-9224-b20a143e45b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "d967d634-b5f1-4106-a39f-66c40814a673",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc6e5f6e-55ab-4ff1-99e7-0f7e0fc437e4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToEditMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "971d1ee1-1d9d-47e9-a130-7a9c626429b3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToSimulationMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d59cf95-a9a4-49cc-bc6d-cfd644dc6c57",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "003a812d-a3a4-46b3-bd2e-a19666256735",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToNextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37d571ae-44bc-437d-bed0-03f7a5b52c09",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToPreviousLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "0a6b18b0-1951-4524-a5cd-a0d19aca392f",
            "actions": [
                {
                    "name": "Next",
                    "type": "Button",
                    "id": "c6135e91-ad22-40b5-8ebc-a8929a0a8ab3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Previous",
                    "type": "Button",
                    "id": "363bf025-c954-4314-a90c-f6a516dc88c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "fb42e601-6ea3-4d2e-b972-8820b97e00c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "926c335a-19ad-4ff7-8b26-c7a7cd369fb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09787e85-20cf-4ee9-a68c-7cd791ddc20b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "564ed5ca-8cbc-4e6a-b077-8ee0e2ad57f9",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9921c372-ca29-4d76-8ef1-0b5a4b1cf405",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Previous",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf6cf255-d855-4283-8534-75935ff60aee",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Previous",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b58b529f-a8ba-49d0-b0cf-55de25cf6196",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "696ba108-7b4d-4f65-8dc8-90473e3d2bf3",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97f03ef2-0099-4733-b0f7-ec6f63923a54",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Help",
            "id": "f81103a0-3fe6-4c06-b38f-906d6a32f52c",
            "actions": [
                {
                    "name": "ToggleHelp",
                    "type": "Button",
                    "id": "bd6374d0-a7fa-4657-81a6-1dc67b491a61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3955efcd-0f24-4ca9-b783-57ef469db5e3",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleHelp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Sounds",
            "id": "f4a8960f-0ba0-4699-904f-2837c09390e6",
            "actions": [
                {
                    "name": "ToggleMusic",
                    "type": "Button",
                    "id": "9f979733-39ba-4e9d-8960-5a5671917c78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSounds",
                    "type": "Button",
                    "id": "84988878-82c1-42ae-b552-b09be691e0f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df0d8fb4-f5e0-4e9b-a523-8ecd42b42502",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMusic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ffd584d-e90b-4bc2-9a7b-44da8a3b46a3",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSounds",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}